# mapping-hte-sectors-webapp

./: .gitignore  LICENSE  README.md  calc_costs.py  params.json  pyproject.toml  webapp.py
calc/: TechData.py  calc_costs.py  params.json  process_full_df.py  tech_class.py
config/: global.yml
config/plots/: AbatementCostPlot.yml  FuelStackedBarPlot.yml  HeatMapPlot.yml  StackedBarPlot.yml  SteelBarPlot.yml
src/: ctrls.py  load.py  proc.py  update.py  utils.py
src/plots/: AbatementCostPlot.py  FuelStackedBarPlot.py  HeatMapPlot.py  StackedBarPlot.py  SteelBarPlot.py
